<resources>
    <string name="app_name">mEvents</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text"> "Material is the metaphor. </string>
    <string name="action_settings">Settings</string>
    <string name="action_score_board">Score Board</string>
    <string name="title_activity_main2">mEvents</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_team_details">Details</string>
    <string name="title_activity_add_team">Add new team</string>

    <string name="add_team">Add team</string>
    <string name="team_name">Team Name</string>
    <string name="team_members">Team Members</string>
    <string name="add_member">Add Team Member</string>
    <string name="name">Name</string>
    <string name="pick_image">Pick Image</string>
    <string name="about_him">About</string>
    <string name="team_logo">Team Logo and Banner</string>
    <string name="pick_logo">Pick Logo</string>
    <string name="pick_banner">Pick Banner</string>
    <string name="members">Team Members</string>
    <string name="create_team">Add Team</string>
    <string name="create_event">Create Event</string>
    <string name="add_team_description">Add team name now and update team logo, banner and team members later.</string>
    <string name="error_add_team">Error in adding team</string>
    <string name="success_add_team">Team add successfully</string>
    <string name="team_name_required">Team name is required</string>
    <string name="no_team_data_message">No team member added in this group add by clicking add button</string>
    <string name="add">Add</string>
    <string name="error_team_member">Error in adding team member</string>
    <string name="success_team_member">Team member added successfully</string>
    <string name="title_activity_add_event">Create Event</string>
    <string name="rule">Rule</string>
    <string name="venue">Venue</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="points">Points</string>
    <string name="add_data_required">All data required</string>
    <string name="event_success">Event created successfully</string>
    <string name="error_event">Error in creating event</string>
    <string name="notify">Notify</string>
    <string name="event_details">Event Details</string>
    <string name="notification_send_success">Notification sent successfully</string>
    <string name="notification_send_error">Error in sending notification</string>
    <string name="send_primer">Send Teaser</string>
    <string name="title_activity_coming_soon">Coming Soon</string>
    <string name="notify_user">Notify User</string>
    <string name="image_required">Select event banner image</string>
    <string name="notification_send">Notification sent successfully</string>
    <string name="title_activity_login">Sign In</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="login_required_for_admin">Login required for admin</string>
    <string name="password_error">wrong password</string>
    <string name="add_score">Add Score</string>
    <string name="give_score">Give Score</string>
    <string name="title_activity_score_board">Score Board</string>
    <string name="score_board_greeting">THANK YOU EVERYONE FOR YOUR PARTICIPATION</string>
    <string name="teams">TEAMS</string>
    <string name="old_points">OLD POINTS</string>
    <string name="new_points">NEW POINTS</string>
    <string name="total_points">TOTAL</string>
    <string name="points_field_error">all fields are required</string>
    <string name="network_error">Network error</string>
    <string name="error_score_board">Error in getting score board</string>
    <string name="events">EVENTS</string>
    <string name="header_points">POINTS</string>
    <string name="error_network">network error</string>
    <string name="event_name">Event Name</string>
    <string name="teaser">Teaser</string>
    <string name="participant_login_text"><u>Click here to login as participant</u></string>
    <string name="title_activity_inform">Notify</string>
    <string name="inform">Inform</string>
    <string name="comment_required">Comment required</string>
    <string name="sent_notification">Notification sent</string>
    <string name="team_listig">Team Listing</string>
    <string name="download">download</string>

</resources>
