<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_view_background"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_lbl_name"
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_lbl_venue"
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/venue"/>
                <TextView
                    android:id="@+id/txt_venue"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_lbl_time"
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/time"/>
                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_lbl_date"
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/date"/>
                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_lbl_point"
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/points"/>
                <TextView
                    android:id="@+id/txt_point"
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txt_notified"
                    android:layout_width="0dp"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:background="@drawable/ic_action_done"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>